[tool.poetry]
name = "html 3"
version = "0.1.0"
description = ""
authors = ["Dartty123 <dariyatamanuk@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-wtf = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
